--- a/TP/semana5/galunos/views/layout.pug
+++ b/TP/semana5/galunos/views/layout.pug
@@ -3,6 +3,6 @@ html
   head
     title= title
     meta(charset='utf-8')
-    link(rel='stylesheet', href='/stylesheets/w3.css')
+    link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
   body
     block content
