--- a/TPC5/views/layout.pug
+++ b/TPC5/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='/stylesheets/w3.css')
+        link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
     body
         header.w3-container.w3-teal
             h2
